# web-qa-automation-mcp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
